create github pages

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                         
                         SCHEDULE</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="index.html"><span class="mbri-hearth mbr-iconfont mbr-iconfont-btn"></span>
-                    Founding Members</a></div>
+                    Fouffnding Members</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="cid-rF5SeNEjF6 mbr-fullscreen mbr-parallax-background" id="header2-a">
+<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="cid-rF5SeNEjF6 mbr-fullscreen mbr-parallax-background" id="header2-a">
 
     
 
