create github pages

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="cid-rF5SeNEjF6 mbr-fullscreen mbr-parallax-background" id="header2-a">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="cid-rF5SeNEjF6 mbr-fullscreen mbr-parallax-background" id="header2-a">
 
     
 
@@ -142,49 +142,16 @@
     </div>
 </section>
 
-<section class="header6 cid-rFbCqq8rUo mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=36YgDDJ7XSc" id="header6-f">
-
-    
-
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(35, 35, 35);">
-    </div>
-
-    <div class="container">
-        <div class="row justify-content-md-center">
-            <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">
-                    INTRO WITH BACKGROUND VIDEO
-                </h1>
-                <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
-                    Intro with background video and color overlay. Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface.
-                </p>
-                <div class="mbr-section-btn align-center">
-                        <a class="btn btn-md btn-primary display-4" href="https://mobirise.co">LEARN MORE</a>
-                        <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">LIVE DEMO</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
-        <a href="#next">
-            <i class="mbri-down mbr-iconfont"></i>
-        </a>
-    </div>
-</section>
-
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
-  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
