--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
                          <img src="assets/images/asset-1ldpi-122x186.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="https://mobirise.co">
-                        SVEN MAURITS<br></a></span>
+                
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -70,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="cid-rF5SeNEjF6 mbr-fullscreen mbr-parallax-background" id="header2-a">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="cid-rF5SeNEjF6 mbr-fullscreen mbr-parallax-background" id="header2-a">
 
     
 
