--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="header6 cid-rFhWHRcvpx mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=wh_sHHkMY7A" id="header6-g">
+<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="header6 cid-rFhWHRcvpx mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=wh_sHHkMY7A" id="header6-g">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(35, 35, 35);">
+    <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(35, 35, 35);">
     </div>
 
     <div class="container">
