--- a/news.html
+++ b/news.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content5 cid-rFzsmGGZ59 mbr-parallax-background" id="content5-1h">
+<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="mbr-section content5 cid-rFzsmGGZ59 mbr-parallax-background" id="content5-1h">
 
     
 
@@ -147,12 +147,12 @@
                     <div class="media-content">
                         <div class="mbr-section-text">
                             <p class="mbr-text align-right mb-0 mbr-fonts-style display-7">
-                               September 12 | 2019<br><strong>NATIONAAL OPEN</strong><br><br>Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. Mobirise Website Builder creates responsive, retina and <em>mobile friendly websites</em> in a few clicks. Mobirise is one of the easiest website development tools available today. <a href="https://www.golf.nl/ngf-wedstrijden#/competition/1795510/leaderboard/1871205" target="_blank">More information</a><br>
+                               September 7 | 2019<br><strong>NATIONAAL OPEN</strong><br><br>A respectable 4th place at the Dutch National Open combined with his overall results on the national professional Order of Merit 2019, secured Sven a spot at the KLM Open. Rain did play a major role on the leaderboard this year, but that did not keep him from hitting some exceptionally clear shots. <a href="https://www.golf.nl/ngf-wedstrijden#/competition/1795510/leaderboard/1871205" target="_blank">More information</a><br>
                             </p>
                         </div>
                     </div>
                     <div class="mbr-figure" style="width: 60%;">
-                     <img src="assets/images/background1.jpg" alt="Mobirise">  
+                     <img src="assets/images/nationaal-open-436x290.jpg" alt="Mobirise" title="">  
                     </div>
                 </div>
             </div>
