create github pages

--- a/founding-members.html
+++ b/founding-members.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a website for free</a></section><section class="mbr-section content5 cid-rFxOhjPiXn mbr-parallax-background" id="content5-z">
+<section class="engine"><a href="https://mobirise.info/b">create your own site for free</a></section><section class="mbr-section content5 cid-rFxOhjPiXn mbr-parallax-background" id="content5-z">
 
     
 
@@ -95,7 +95,7 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-5">
-                     <p>Being a professional golf player requires me to be at the top of my game every single day. To get to that crucial point of total dedication and reach full potential, I need the help from committed sponsors.</p><p>I invite you to be part of my adventures while I embark on my journey of a lifetime.&nbsp;<span style="font-size: 1.5rem;">Will you join me?</span></p>
+                     <p>As a professional golf player I need to be at the top of my game every single day. To stay focussed on my game and maintain full concentration during the season, I need the help of committed sponsors.</p><p>You too can be part of this once in a lifetime experience and join me on my endeavour to reach the top and write golfing history.&nbsp;<span style="font-size: 1.5rem;">Will you join me?</span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
                      <p><br></p>
@@ -136,7 +136,7 @@
                                 per kwartaal gefactureerd</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="https://mobirise.co" class="btn btn-danger display-4">BUY NOW</a></div>
+                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="https://mobirise.co" class="btn btn-danger display-4">GO PERSONAL</a></div>
                 </div>
             </div>
 
@@ -165,7 +165,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="https://mobirise.co" class="btn btn-danger display-4">BUY NOW</a></div>
+                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="https://mobirise.co" class="btn btn-danger display-4">GO PRO</a></div>
                 </div>
             </div>
 
@@ -180,14 +180,14 @@
                         <span class="price-figure mbr-fonts-style display-1">
                             2.995<br></span>
                         <small class="price-term mbr-fonts-style display-7">
-                            per kwartaal</small>
+                            quarterly<br>(fully tax deductable)</small>
                     </div>
                 </div>
                 <div class="plan-body">
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-7">
-                            <li class="list-group-item">Slechts<strong> 2 </strong>beschikbaar!</li><li class="list-group-item">De perfecte manier om uw bedrijf prominent te associeren met een van de beste golfers van Nederland!</li>
-                            <li class="list-group-item"><strong>10 x&nbsp;</strong><strong><a href="http://www.ximedes.com">Logo Posities</a><br></strong>voor uw bedrijf</li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>Full Online</strong><br>Vermelding online &amp; social</span><br></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>1 x&nbsp;</strong></span><span style="background-color: transparent; font-size: 1rem;"><a href="#top">Pro Tour Clinic</a><br></span><span style="background-color: transparent; font-size: 1rem;">t.w.v. €1.500</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>4 x&nbsp;</strong><a href="#top">Flight Connect</a><br>t.w.v. € 3.200</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>12 x <a href="#top">Premium Deals</a></strong><br>Exclusive Founding Member Deals</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>4 x</strong> <a href="#top">KLM Open 2020</a><br>tickets</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;">Charity Chip Choice</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>Priority Access</strong><br>Early invites to innovative golf projects, seminars &amp; meetups (Blockchain Smart Partner Contracts, Real-Time Scoring, Crypto Golf Tour, etc.)&nbsp;<br></span><br></li>
+                            <li class="list-group-item">Only<strong>&nbsp;2 </strong>left!<br></li><li class="list-group-item">The perfect way to prominently associate your company with one of the best golfers of the Netherlands!</li>
+                            <li class="list-group-item"><strong>10 x&nbsp;</strong><strong><a href="http://www.ximedes.com">Logo Positions</a><br></strong>of your company</li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>Full Brand Exposure</strong><br>online &amp; social media channels</span><br></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>1 x&nbsp;</strong></span><span style="background-color: transparent; font-size: 1rem;"><a href="#top">Pro Tour Clinic</a><br></span><span style="background-color: transparent; font-size: 1rem;">(€1.500 value)</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>4 x&nbsp;</strong><a href="#top">Flight Connect</a><br>(€ 3.200 value)</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>12 x <a href="#top">Premium Deals</a></strong><br>Exclusive Founding Member Deals<br>(€2.500 value)</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>4 x</strong> <a href="#top">KLM Open 2020</a><br>VIP Tournament Tickets<br>(€400 value)</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;">Open Chip Choice</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>Priority Access</strong><br>Early invites to innovative golf projects, seminars &amp; meetups (Blockchain Smart Partner Contracts, Real-Time Scoring, Crypto Golf Tour, etc.)&nbsp;<br></span><br></li>
                         </ul>
                     </div>
                     <div class="mbr-section-btn text-center py-4 pb-5"><a href="https://mobirise.co" class="btn btn-danger display-4">GO PREMIUM</a></div>
