create github pages

--- a/about.html
+++ b/about.html
@@ -69,39 +69,30 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="timeline1 cid-rFznVGDtsu" id="timeline1-1f">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="timeline1 cid-rFznVGDtsu" id="timeline1-1f">
 
     
 
     
 
     <div class="container align-center">
-        <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2">
-            <br><br>Timeline
-        </h2>
+        <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2"><br><br>Timeline</h2>
         <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-5">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-        </h3>
+            From digging shallow holes on a campsite lawn as a 7 year old boy, trying to make these impossible putts from dusk till dawn. To the ball striking powerhouse and professional golf athlete of today.<br>Sven's brief history timeline towards making his golfing dream come true.</h3>
 
         <div class="container timelines-container reverseTimeline" mbri-timelines="">
             <!--1-->
             <div class="row timeline-element reverse">
                  <div class="timeline-date-panel col-xs-12 col-md-6  align-left">         
                     <div class="time-line-date-content">
-                        <p class="mbr-timeline-date mbr-fonts-style display-5">
-                            1 january 2018  
-                        </p>
+                        <p class="mbr-timeline-date mbr-fonts-style display-5">July 23, 1987</p>
                     </div>
                 </div>
            <span class="iconBackground"></span>
             <div class="col-xs-12 col-md-6 align-right">
                 <div class="timeline-text-content">
-                    <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                        Multi Homepages
-                    </h4>
-                    <p class="mbr-timeline-text mbr-fonts-style display-7">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
-                    </p>
+                    <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Sven's Birthday</h4>
+                    <p class="mbr-timeline-text mbr-fonts-style display-7">Sven was born in Meppel, The Netherlands.</p>
                  </div>
             </div>
             </div>
@@ -110,19 +101,16 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                            2 february 2019  
-                        </p>
+                            1994</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Responsive Design
-                        </h4>
+                            Started Playing Golf</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
-                        </p>
+                            At the age of 7 Sven started playing golf when his brother tagged him along on the golf course. Not long after, he got is first junior golf set. It included just a 3 wood, 7 iron and a putter.</p>
                     </div>
                 </div>
             </div>
@@ -130,16 +118,16 @@
             <div class="row timeline-element reverse separline">
                 <div class="timeline-date-panel col-xs-12 col-md-6  align-left">
                     <div class="time-line-date-content">
-                        <p class="mbr-timeline-date mbr-fonts-style display-5">September 2019 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
+                        <p class="mbr-timeline-date mbr-fonts-style display-5">year</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-right">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            KLM Open</h4>      
+                            Milestone 3</h4>      
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            At the magnificent International Golf Course in Amsterdam, Sven managed to secure himself a starting position for the weekend after finishing his second round with a solid score.</p>
+                            text</p>
                     </div>
                 </div>
             </div>
@@ -148,19 +136,15 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                            4 april 2021
-                        </p>
+                            year</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Design out of the box
-                        </h4>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Milestone 4</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
-                        </p>
+                            text</p>
                     </div>
                 </div>
             </div>
@@ -169,19 +153,16 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6  align-left">
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                            5 may 2022
-                        </p>
+                            year</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-right">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Awesome Reports
-                        </h4>
+                            Milestone 5</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
-                        </p>
+                            text</p>
                     </div>
                 </div>
             </div>
@@ -190,19 +171,16 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
                     <div class="time-line-date-content">
                        <p class="mbr-timeline-date mbr-fonts-style display-5">
-                            6 june 2023
-                        </p>
+                            year</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Multi Homepages
-                        </h4>
+                            Milestone 6</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
-                        </p>
+                            text</p>
                     </div>
                 </div>
             </div>
@@ -211,19 +189,16 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6  align-left">
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                           7 july 2024
-                        </p>
+                           year</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-right">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Responsive Design
-                        </h4>
+                            Milestone 7</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
-                        </p>
+                            text</p>
                     </div>
                 </div>
             </div>
@@ -232,16 +207,14 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                           8 august 2025  
-                        </p>
+                           year</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Smart Watch
-                        </h4>
+                            Milestone 8</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
                         </p>
@@ -253,20 +226,17 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6  align-left">
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                           9 september 2026
-                        </p>
+                           year</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-right">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Design out of the box
-                        </h4>
+                            Milestone 9</h4>
 
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
-                        </p>
+                            text</p>
                     </div>
                 </div>
             </div>
@@ -275,16 +245,14 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
                     <div class="time-line-date-content">
                        <p class="mbr-timeline-date mbr-fonts-style display-5">
-                          10 october 2027
-                        </p>
+                          year</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Awesome Reports
-                        </h4> 
+                            Milestone 10</h4> 
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
                         </p>
@@ -296,18 +264,15 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6  align-left">
                     <div class="time-line-date-content">
                        <p class="mbr-timeline-date mbr-fonts-style display-5">
-                          11 november 2028
-                        </p>
+                          September 2019</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-right">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Design out of the box
-                        </h4>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">KLM Open</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
+                            At the magnificent International Golf Course in Amsterdam, Sven managed to secure himself a starting position for the weekend at the European Tour KLM Open Tournament after finishing his second round.
                         </p>
                     </div>
                 </div>
@@ -317,19 +282,16 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                           12 december 2029
-                        </p>
+                           2020</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Awesome Reports
-                        </h4>
+                            European Tour</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
-                        </p>
+                            Having played golf for as long as he can remember, Sven's next adventure is a European Tour card. To achieve this long lasting dream, his focus will be entirely on playing his best game with pinpoint accuracy on strategically selected tournaments thoughout the upcoming 2020 season.<br>Anticipating to play at the world's biggest golf tournaments and compete against some of the greatest golf players of this era. All that's needed is a laser sharp focus and a little help from his Founding Members...</p>
                     </div>
                 </div>
             </div>
