create github pages

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a website</a></section><section class="timeline1 cid-rFznVGDtsu mbr-parallax-background" id="timeline1-1f">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="timeline1 cid-rFznVGDtsu mbr-parallax-background" id="timeline1-1f">
 
     
 
@@ -265,7 +265,7 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6  align-left">
                     <div class="time-line-date-content">
                        <p class="mbr-timeline-date mbr-fonts-style display-5">
-                          September 2019</p>
+                          September 2019, '12, '11, '10 &amp; '09</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
@@ -273,8 +273,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">KLM Open</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            At the magnificent International Golf Course in Amsterdam, Sven managed to secure himself a starting position for the weekend at the European Tour KLM Open Tournament after finishing his second round.
-                        </p>
+                            At the magnificent International Golf Course in Amsterdam, Sven managed to secure himself a starting position for the weekend at the European Tour KLM Open Tournament after finishing his second round.<br>This was the 5th time that Sven participated at this tournament. Three times as an amateur and twice as a professional golf player.&nbsp;</p>
                     </div>
                 </div>
             </div>
