--- a/founding-members.html
+++ b/founding-members.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="mbr-section content5 cid-rFxOhjPiXn mbr-parallax-background" id="content5-z">
+<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="mbr-section content5 cid-rFxOhjPiXn mbr-parallax-background" id="content5-z">
 
     
 
@@ -178,13 +178,13 @@
                             €                        </span>
                         <span class="price-figure mbr-fonts-style display-1">
                             1.499<br></span>
-                        <small class="price-term mbr-fonts-style display-7">quarterly<br>(fully tax deductible)<br></small>
+                        <small class="price-term mbr-fonts-style display-7">quarterly<br><br></small>
                     </div>
                 </div>
                 <div class="plan-body">
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-7">
-                            <li class="list-group-item">Only <strong>12 </strong>available!</li><li class="list-group-item">The perfect way to prominently associate your company with one of the best golfers of the Netherlands!</li><li class="list-group-item"><strong>1 x </strong>Full Brand Exposure<br><span style="background-color: transparent; font-size: 1rem;">online &amp; social media channels</span></li><li class="list-group-item"><strong>1 x</strong>&nbsp;Pro Tour Clinic Day<br><span style="background-color: transparent; font-size: 1rem;">yearly<br></span><span style="background-color: transparent; font-size: 1rem;">(€1.500 value)</span></li><li class="list-group-item"><strong>4 x</strong> Flight Connect<br><span style="background-color: transparent; font-size: 1rem;">yearly<br></span><span style="background-color: transparent; font-size: 1rem;">(€ 3.200 value)</span></li><li class="list-group-item"><strong>12 x</strong> Premium Deals<br><span style="background-color: transparent; font-size: 1rem;">Exclusive Founding Member Deals<br></span><span style="background-color: transparent; font-size: 1rem;">(€2.500+ value)</span></li><li class="list-group-item"><strong>4 x</strong> KLM Open 2020<br><span style="background-color: transparent; font-size: 1rem;">VIP Tournament Tickets<br></span><span style="background-color: transparent; font-size: 1rem;">(€400 value)</span></li><li class="list-group-item"><strong>1 x</strong> Charity Chip-in<br><span style="background-color: transparent; font-size: 1rem;">5% of tournament earnings to charity of your choice</span></li><li class="list-group-item">Priority Access<br><span style="background-color: transparent; font-size: 1rem;">Early invites to innovative golf projects, seminars &amp; meetups (Blockchain Smart Partner Contracts, Real-Time Scoring, Crypto Golf Tour, etc.)&nbsp;</span></li>
+                            <li class="list-group-item">Only <strong>12 </strong>available!</li><li class="list-group-item"><strong>Fully</strong> tax deductible</li><li class="list-group-item">The perfect way to prominently associate your company with one of the best golfers of the Netherlands!</li><li class="list-group-item"><strong>1 x </strong>Full Brand Exposure<br><span style="background-color: transparent; font-size: 1rem;">online &amp; social media channels</span></li><li class="list-group-item"><strong>1 x</strong>&nbsp;Pro Tour Clinic Day<br><span style="background-color: transparent; font-size: 1rem;">yearly<br></span><span style="background-color: transparent; font-size: 1rem;">(€1.500 value)</span></li><li class="list-group-item"><strong>4 x</strong> Flight Connect<br><span style="background-color: transparent; font-size: 1rem;">yearly<br></span><span style="background-color: transparent; font-size: 1rem;">(€ 3.200 value)</span></li><li class="list-group-item"><strong>12 x</strong> Premium Deals<br><span style="background-color: transparent; font-size: 1rem;">Exclusive Founding Member Deals<br></span><span style="background-color: transparent; font-size: 1rem;">(€2.500+ value)</span></li><li class="list-group-item"><strong>4 x</strong> KLM Open 2020<br><span style="background-color: transparent; font-size: 1rem;">VIP Tournament Tickets<br></span><span style="background-color: transparent; font-size: 1rem;">(€400 value)</span></li><li class="list-group-item"><strong>1 x</strong> Charity Chip-in<br><span style="background-color: transparent; font-size: 1rem;">5% of tournament earnings to charity of your choice</span></li><li class="list-group-item">Priority Access<br><span style="background-color: transparent; font-size: 1rem;">Early invites to innovative golf projects, seminars &amp; meetups (Blockchain Smart Partner Contracts, Real-Time Scoring, Crypto Golf Tour, etc.)&nbsp;</span></li>
                         </ul>
                     </div>
                     <div class="mbr-section-btn text-center py-4 pb-5"><a href="https://mobirise.co" class="btn btn-danger display-4">GO PRO</a></div>
@@ -202,13 +202,13 @@
                         <span class="price-figure mbr-fonts-style display-1">
                             2.995<br></span>
                         <small class="price-term mbr-fonts-style display-7">
-                            quarterly<br>(fully tax deductible)</small>
+                            quarterly<br><br></small>
                     </div>
                 </div>
                 <div class="plan-body">
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-7">
-                            <li class="list-group-item">Only<strong>&nbsp;2 </strong>left!<br></li><li class="list-group-item"><strong>Everything</strong> included in the <strong>Pro</strong> partner plan <strong>plus...</strong></li>
+                            <li class="list-group-item">Only<strong>&nbsp;2 </strong>left!</li><li class="list-group-item"><strong>Fully</strong> tax deductible</li><li class="list-group-item"><strong>Everything</strong> included in the <strong>Pro</strong> partner plan <strong>plus...</strong></li>
                             <li class="list-group-item"><strong>10 x&nbsp;</strong><strong><a href="http://www.ximedes.com">Logo Positions</a><br></strong>of your company on all golf apparel</li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>1 x </strong><a href="http://www.svenmaurits.com">Full Brand Exposure</a><br>online &amp; social media channels</span><br></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>1 x&nbsp;</strong></span><span style="background-color: transparent; font-size: 1rem;"><a href="#top">Pro Tour Clinic Day</a><br></span><span style="background-color: transparent; font-size: 1rem;">yearly<br>(€1.500 value)</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>4 x&nbsp;</strong><a href="#top">Flight Connect</a><br>(€ 3.200 value)</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>12 x <a href="#top">Premium Deals</a></strong><br>Exclusive Founding Member Deals<br>(€2.500+ value)</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>4 x</strong> <a href="#top">KLM Open 2020</a><br>VIP Tournament Tickets<br>(€400 value)</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>1 x</strong> <a href="http://www.svenmaurits.com">Charity Chip-in</a><br>5% of tournament earnings to charity of your choice</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;"><strong>Priority Access</strong><br>Early invites to innovative golf projects, seminars &amp; meetups (Blockchain Smart Partner Contracts, Real-Time Scoring, Crypto Golf Tour, etc.)&nbsp;</span><br></li>
                         </ul>
                     </div>
