--- a/founding-members.html
+++ b/founding-members.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="mbr-section content5 cid-rFxOhjPiXn mbr-parallax-background" id="content5-z">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section content5 cid-rFxOhjPiXn mbr-parallax-background" id="content5-z">
 
     
 
@@ -95,7 +95,7 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-5">
-                     <p>As a professional golf player I need to be at the top of my game every single day. To stay focussed on my game and maintain full concentration during the season, I need the help of committed sponsors.</p><p>You too can be part of this once in a lifetime experience and join me on my endeavour to reach the top and write golfing history.&nbsp;<span style="font-size: 1.5rem;">Will you join me?</span></p>
+                     <p>As a professional golf player I need to be at the top of my game every single day. To stay focused on my game and maintain full concentration during the season, I need the help of committed sponsors.</p><p>You too can be part of this once in a lifetime experience and join me on my endeavour to reach the top and write golfing history.&nbsp;<span style="font-size: 1.5rem;">Will you join me?</span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
                      <p><br></p>
